[package]
name = "kageshirei-utils"
version = "0.1.0"
edition = "2021"
categories = ["simulation"]
keywords = ["kageshirei", "agent", "library", "utility"]
repository = "https://github.com/Kageshirei/KageShirei"
license-file = "../../LICENSE"
description = "A library for the KageShirei agent that provides utility functions."
readme = "README.md"

[dependencies]

[features]
default = ["duration-extension", "unrecoverable-error", "unwrap-infallible"]
duration-extension = []
unrecoverable-error = []
unwrap-infallible = []

[lints]
workspace = true