[package]
name = "rs2-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
log = { version = "0.4.21", optional = true }
validator = { version = "0.18.1", features = ["derive"], optional = true }

[features]
default = ["duration-extension", "unrecoverable-error", "unwrap-infallible"]
duration-extension = []
unrecoverable-error = []
unwrap-infallible = []
print-validation-error = ["dep:log", "dep:validator"]