[package]
name = "mod-nostd-nt-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
rs2-runtime = { path = "../../libs/rs2-runtime" }
mod-nostd = { path = "../../modules/mod-nostd" }
futures = "0.3.30"
spin = "0.9"


[dev-dependencies]
libc-print = "0.1.23"
rs2-communication-protocol = { path = "../../libs/rs2-communication-protocol" }
mod-win32 = { path = "../../modules/mod-win32" }
