[package]
name = "mod-nostd-nt-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
kageshirei-runtime = { path = "../../libs/kageshirei-runtime" }
mod-nostd = { path = "../../modules/mod-nostd" }
futures = "0.3.30"
spin = "0.9"

[dev-dependencies]
libc-print = "0.1.23"
kageshirei-communication-protocol = { path = "../../libs/kageshirei-communication-protocol" }
mod-win32 = { path = "../../modules/mod-win32" }

[lints]
workspace = true
