[package]
name = "mod-nostd-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
rs2-communication-protocol = { path = "../../libs/rs2-communication-protocol" }
rs2-runtime = { path = "../../libs/rs2-runtime" }
mod-win32 = { path = "../../modules/mod-win32" }
spin = "0.9"

[features]
default = ["std"]
std = []