[package]
name = "mod-nostd"
version = "0.1.0"
edition = "2021"

[dependencies]
kageshirei-win32 = { path = "../../libs/kageshirei-win32" }
mod-agentcore = { path = "../../modules/mod-agentcore" }
mod-win32 = { path = "../../modules/mod-win32" }
libc-print = "0.1.23"
spin = "0.9"

[dev-dependencies]
libc-print = "0.1.23"

[lints]
workspace = true