[package]
name = "mod-nt-heapalloc"
version = "0.1.0"
edition = "2021"

[dependencies]
rs2-indirect-syscall = {path = "../../libs/rs2-indirect-syscall" }
rs2-win32 = {path = "../../libs/rs2-win32" }
mod-win32 = {path = "../mod-win32" }
mod-hhtgates = {path = "../mod-hhtgates" }
mod-agentcore = {path = "../mod-agentcore" }
spin = "0.9"



[dev-dependencies]
libc-print = "0.1.23"