[package]
name = "mod-nt-virtualalloc"
version = "0.1.0"
edition = "2021"

[dependencies]
kageshirei-indirect-syscall = {path = "../../libs/kageshirei-indirect-syscall" }
kageshirei-win32 = {path = "../../libs/kageshirei-win32" }
mod-win32 = {path = "../mod-win32" }
mod-hhtgates = {path = "../mod-hhtgates" }
mod-agentcore = {path = "../mod-agentcore" }
spin = "0.9"

[lints]
workspace = true