[package]
name = "mod-protocol-http"
version = "0.1.0"
edition = "2021"
categories = ["simulation"]
keywords = ["kageshirei", "agent", "module", "communication", "json"]
repository = "https://github.com/Kageshirei/KageShirei"
license-file = "../../LICENSE"
description = "A module for the KageShirei agent that provides JSON datatypes for communication."
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "z"
codegen-units = 1
lto = true
strip = true
debug = false
debug-assertions = false
panic = "abort"
incremental = false

[dependencies]
kageshirei-communication-protocol = { path = "../../libs/kageshirei-communication-protocol" }
reqwest = { version = "0.12.8", optional = true, features = ["rustls-tls", "stream"] }

[dev-dependencies]
tokio = { version = "1.40.0", features = ["full"] }
axum = { version = "0.7.7" , features = ["macros"]}
tokio-util = "0.7.12"
serial_test = "3.1.1"

[features]
default = ["std"]
std = ["dep:reqwest"]

[lints]
workspace = true